Added Configuration and Classified Lights
- new class to control the traffic lights which handles all gpio calls
and can catch errors with the GPIO line (useful for developing on a
non-raspberry pi)

- Added configuration page to change the wakeup time

--- a/traffic/templates/index.html
+++ b/traffic/templates/index.html
@@ -1,14 +1,8 @@
-
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}">
+	</head>
 	<body>
-
-	<style>
-	input{
-		width: 19%;
-		padding: 4%;
-		height: 50px;
-	}
-	</style>
 
 	<h1>Color Control</h1>
 	<form method='post'>
