Redid interface to have status in the buttons
- Buttons are arranged vertically like a traffic light

- When they are pressed the button will light up or turn off

--- a/traffic/static/styles/index.css
+++ b/traffic/static/styles/index.css
@@ -3,3 +3,18 @@ input{
 	padding: 4%;
 	height: 50px;
 }
+
+.round{
+	font-weight: bold;
+	font-size: 3vw;
+	color: white;
+	width: 20vh;
+	height: 20vh;
+	border-radius:50%;
+	border: none;
+	outline: none;
+}
+
+br{
+	line-height: 150%;
+}
